--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title>Meadowlark Travels</title>
+  <meta charset="utf-8">  
+  {{{ _sections.style }}}
+  {{{ _sections.head }}}
+  <link rel="stylesheet" href="/bootstrap.min.css">
 </head>
-  <body>
-    <div class="container">
+
+<body>  
+  <div class="container">
     {{{body}}}
-    </div>
-  </body>
+  </div>
+  
+
+  {{{ _sections.script }}}
+</body>
+
 </html>
